[package]
name = "aesce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                   # Lets you generate random UUIDs
    "fast-rng",             # Use a faster (but still sufficiently random) RNG
    # "macro-diagnostics",    # Enable better diagnostics for compile-time UUIDs
    "serde",                # Adds the ability to serialize and deserialize a
                            # UUID using serde
]